fixed issue with overflow of chat items in smaller screen sizes because there was no max-width set previously set to none causes overflow, now set the width to a specific dimension in this case 100vw.

--- a/src/stylesheets/ChatList.module.css
+++ b/src/stylesheets/ChatList.module.css
@@ -1,13 +1,13 @@
 .chatList {
     display: flex;
     flex-direction: column;
-    overflow-y:  scroll;
-    scrollbar-width: none;
     background-color: var(--background30);
     height: inherit;
     min-height: 0;
     gap: .5rem;
     max-width: 300px;
+    position: relative;
+    
 }
 
 .container {
@@ -20,8 +20,6 @@
 }
 
 .header {
-    
-    
     background-color: var(--background);
     display: flex;
     align-items: center;
@@ -50,7 +48,8 @@
 } 
 @media(max-width: 768px) {
     .chatList {
-        max-width: none;
+        max-width: 100vw;
+        
         /* display: none; */
     }
 
